--- a/SocketClient/MainWindow.xaml
+++ b/SocketClient/MainWindow.xaml
@@ -1,21 +1,6 @@
 ﻿<Window x:Class="SocketClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" Closing="Window_Closing">
-    <DockPanel Margin="10">
-        <Grid DockPanel.Dock="Bottom" Margin="0,10,0,0" Background="WhiteSmoke" Height="25">
-            <Button x:Name="btnConnect" Content="Connect" Visibility="Visible" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100" Height="20" Click="btnConnect_Click" IsDefault="True"/>
-            <DockPanel x:Name="dckLogin" Visibility="Collapsed">
-                <Button x:Name="btnLogin" Content="Login" DockPanel.Dock="Right" Width="100" Click="btnLogin_Click" Height="20" IsDefault="True"/>
-                <Label Content="Username :" DockPanel.Dock="Left"/>
-                <TextBox x:Name="txtUsername" MaxLength="20" Width="200" Height="20" HorizontalAlignment="Left"/>
-            </DockPanel>
-            <DockPanel x:Name="dckChat" Visibility="Collapsed" Margin="2">
-                <Button x:Name="btnSendNew" Content="Send Object" DockPanel.Dock="Right" Width="100" Click="btnSendNew_Click" Height="20"/>
-                <Button x:Name="btnSend" Content="Send" DockPanel.Dock="Right" Width="100" Click="btnSend_Click" Height="20" IsDefault="True"/>
-                <TextBox x:Name="txtInput" Height="20" TextWrapping="Wrap"/>
-            </DockPanel>
-        </Grid>
-        <TextBox x:Name="txtChat" IsReadOnly="True" TextWrapping="Wrap" Background="WhiteSmoke" VerticalScrollBarVisibility="Auto"/>
-    </DockPanel>
+        Title="Socket Client" Height="350" Width="525">
+    <ContentControl x:Name="ccPage" />
 </Window>
