Added more packets and splitted them up between client and server packets. Added handling for these packets to both the client and server. Added a test project to test the packets before implementing everything in a game. Redid some server command code to avoid nullpointers, but might need to do some more and improve the code as we go.

--- a/SocketClient/MainWindow.xaml
+++ b/SocketClient/MainWindow.xaml
@@ -2,5 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Socket Client" Height="350" Width="525">
-    <ContentControl x:Name="ccPage" />
+    <Grid>
+        <ContentControl x:Name="ccPage" />
+        <Button Height="20" Width="20" VerticalAlignment="Bottom" Click="Button_Click"/>
+    </Grid>
+    
 </Window>
