--- a/ClientTest/Views/Testing.xaml
+++ b/ClientTest/Views/Testing.xaml
@@ -84,9 +84,13 @@
                 </ListBox.ItemsPanel>
             </ListBox>
         </DockPanel>
-        <ScrollViewer MinWidth="250" VerticalScrollBarVisibility="Visible" Grid.Column="1">
-            <TextBlock x:Name="txtConsole" TextWrapping="Wrap" Background="Black" Foreground="White"/>
-        </ScrollViewer>
+        <ListBox x:Name="lbConsole" Background="Black" Foreground="White" Grid.Column="1">
+            <ListBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel VerticalAlignment="Bottom"/>
+                </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+        </ListBox>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Left">
             <StackPanel >
                 <Button x:Name="btnMoveUp" Content="Move Up"  Height="20" Width="75" Click="btnMoveUp_Click"/>
