-- Every map on a different thread works for now -- Ability to teleport between maps (through the chat currently) -- Added the teleport to the log options

--- a/ClientTest/MainWindow.xaml
+++ b/ClientTest/MainWindow.xaml
@@ -12,6 +12,7 @@
                     <MenuItem Name="mniLogOtherPlayerDisconnect" Header="Other player disconnect" IsCheckable="True" IsChecked="True" />
                     <Separator />
                     <MenuItem Name="mniLogMovement" Header="Movement" IsCheckable="True" IsChecked="True" />
+                    <MenuItem Name="mniLogTeleport" Header="Teleport" IsCheckable="True" IsChecked="True" />
                     <Separator />
                     <MenuItem Name="mniLogMessage" Header="Message" IsCheckable="True" IsChecked="True" />
                 </MenuItem>
