--- a/ClientTest/LogWindow.xaml
+++ b/ClientTest/LogWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" 
-        Title="Console" Height="450" Width="500" ResizeMode="NoResize">
+        Title="Console" Height="450" Width="500" ResizeMode="NoResize" Closing="Window_Closing">
     <ListBox x:Name="lbLog" Background="Black" Foreground="White">
         <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
